update readme and experimental analysis

--- a/Experimental-Data-Cleaning.ipynb
+++ b/Experimental-Data-Cleaning.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
        "26"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -854,22 +854,183 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset_folder = 'dataset-3/'\n",
+    "dataset_path = dataset_folder + 'load.data'\n",
+    "attributes_path = dataset_folder + 'attributes.txt'\n",
+    "\n",
+    "# Get all the attributes\n",
+    "attributes_type = get_attributes_type(attributes_path,\n",
+    "                                      numeric_term='numerical')\n",
+    "\n",
+    "data = pd.read_csv(dataset_path,header=None, names=list(attributes_type.keys()))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Attribute</th>\n",
+       "      <th>Data type</th>\n",
+       "      <th>Mean/Distinct values</th>\n",
+       "      <th>Std/Isolated values</th>\n",
+       "      <th>Num of Nulls</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>Sample-code-number</td>\n",
+       "      <td>nominal</td>\n",
+       "      <td>645</td>\n",
+       "      <td>599</td>\n",
+       "      <td>0 (0.00%)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>Clump-Thickness</td>\n",
+       "      <td>numerical</td>\n",
+       "      <td>4.42</td>\n",
+       "      <td>2.81</td>\n",
+       "      <td>0 (0.00%)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>Uniformity-of-Cell-Size</td>\n",
+       "      <td>numerical</td>\n",
+       "      <td>3.13</td>\n",
+       "      <td>3.05</td>\n",
+       "      <td>0 (0.00%)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>Uniformity-of-Cell-Shape</td>\n",
+       "      <td>numerical</td>\n",
+       "      <td>3.21</td>\n",
+       "      <td>2.97</td>\n",
+       "      <td>0 (0.00%)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>Marginal-Adhesion</td>\n",
+       "      <td>numerical</td>\n",
+       "      <td>2.81</td>\n",
+       "      <td>2.85</td>\n",
+       "      <td>0 (0.00%)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5</td>\n",
+       "      <td>Single-Epithelial-Cell-Size</td>\n",
+       "      <td>numerical</td>\n",
+       "      <td>3.22</td>\n",
+       "      <td>2.21</td>\n",
+       "      <td>0 (0.00%)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>6</td>\n",
+       "      <td>Bare-Nuclei</td>\n",
+       "      <td>numerical</td>\n",
+       "      <td>3.54</td>\n",
+       "      <td>3.64</td>\n",
+       "      <td>16 (2.29%)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>7</td>\n",
+       "      <td>Bland-Chromatin</td>\n",
+       "      <td>numerical</td>\n",
+       "      <td>3.44</td>\n",
+       "      <td>2.44</td>\n",
+       "      <td>0 (0.00%)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>8</td>\n",
+       "      <td>Normal-Nucleoli</td>\n",
+       "      <td>numerical</td>\n",
+       "      <td>2.87</td>\n",
+       "      <td>3.05</td>\n",
+       "      <td>0 (0.00%)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>9</td>\n",
+       "      <td>Mitoses</td>\n",
+       "      <td>numerical</td>\n",
+       "      <td>1.59</td>\n",
+       "      <td>1.71</td>\n",
+       "      <td>0 (0.00%)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>10</td>\n",
+       "      <td>Class</td>\n",
+       "      <td>nominal</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0 (0.00%)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "False"
+       "                      Attribute  Data type Mean/Distinct values  \\\n",
+       "0            Sample-code-number    nominal                  645   \n",
+       "1               Clump-Thickness  numerical                 4.42   \n",
+       "2       Uniformity-of-Cell-Size  numerical                 3.13   \n",
+       "3      Uniformity-of-Cell-Shape  numerical                 3.21   \n",
+       "4             Marginal-Adhesion  numerical                 2.81   \n",
+       "5   Single-Epithelial-Cell-Size  numerical                 3.22   \n",
+       "6                   Bare-Nuclei  numerical                 3.54   \n",
+       "7               Bland-Chromatin  numerical                 3.44   \n",
+       "8               Normal-Nucleoli  numerical                 2.87   \n",
+       "9                       Mitoses  numerical                 1.59   \n",
+       "10                        Class    nominal                    2   \n",
+       "\n",
+       "    Std/Isolated values Num of Nulls  \n",
+       "0                   599    0 (0.00%)  \n",
+       "1                  2.81    0 (0.00%)  \n",
+       "2                  3.05    0 (0.00%)  \n",
+       "3                  2.97    0 (0.00%)  \n",
+       "4                  2.85    0 (0.00%)  \n",
+       "5                  2.21    0 (0.00%)  \n",
+       "6                  3.64   16 (2.29%)  \n",
+       "7                  2.44    0 (0.00%)  \n",
+       "8                  3.05    0 (0.00%)  \n",
+       "9                  1.71    0 (0.00%)  \n",
+       "10                    0    0 (0.00%)  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.nan == False"
+    "# Edit number in head() to show more or less\n",
+    "create_stat_df(data,attributes_type)"
    ]
   },
   {
